// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse    1`] = `[]`;

exports[`parse   file 1`] = `
[
  "**/  file",
]
`;

exports[`parse  \\  1`] = `
[
  "**/  ",
]
`;

exports[`parse  1`] = `[]`;

exports[`parse ! 1`] = `[]`;

exports[`parse !/ 1`] = `[]`;

exports[`parse !file 1`] = `
[
  "!**/file",
]
`;

exports[`parse #file 1`] = `[]`;

exports[`parse *(a|b|c) 1`] = `
[
  "**/*\\(a|b|c\\)",
]
`;

exports[`parse ** 1`] = `
[
  "**/*",
]
`;

exports[`parse **/ 1`] = `
[
  "**/*/",
]
`;

exports[`parse **/dir 1`] = `
[
  "**/dir",
]
`;

exports[`parse **/dir/ 1`] = `
[
  "**/dir/",
]
`;

exports[`parse **/dir/file 1`] = `
[
  "**/dir/file",
]
`;

exports[`parse **/file 1`] = `
[
  "**/file",
]
`;

exports[`parse *c 1`] = `
[
  "**/*c",
]
`;

exports[`parse +(a|b|c) 1`] = `
[
  "**/+\\(a|b|c\\)",
]
`;

exports[`parse / 1`] = `[]`;

exports[`parse /** 1`] = `
[
  "**/*",
]
`;

exports[`parse /**/ 1`] = `
[
  "**/*/",
]
`;

exports[`parse /dir 1`] = `
[
  "dir",
]
`;

exports[`parse /dir/ 1`] = `
[
  "dir/",
]
`;

exports[`parse /dir/** 1`] = `
[
  "dir/**/*",
]
`;

exports[`parse /dir/**/ 1`] = `
[
  "dir/**/*/",
]
`;

exports[`parse /dir/**/file 1`] = `
[
  "dir/**/file",
]
`;

exports[`parse /dir/file 1`] = `
[
  "dir/file",
]
`;

exports[`parse /file 1`] = `
[
  "file",
]
`;

exports[`parse ?(a|b|c) 1`] = `
[
  "**/?\\(a|b|c\\)",
]
`;

exports[`parse @(a|b|c) 1`] = `
[
  "**/@\\(a|b|c\\)",
]
`;

exports[`parse [ '/dir/**', '!/dir/file' ] 1`] = `
[
  "dir/**/*",
  "!dir/file",
]
`;

exports[`parse [ '/dir/**', '!/dir/sub', '!/dir/sub/file' ] 1`] = `
[
  "dir/**/*",
  "!dir/sub",
  "!dir/sub/file",
]
`;

exports[`parse [ '/dir/**', '!/dir/sub/', '!/dir/sub/file' ] 1`] = `
[
  "dir/**/*",
  "!dir/sub/",
  "!dir/sub/file",
]
`;

exports[`parse [ '/dir/**', '!/dir/sub/file' ] 1`] = `
[
  "dir/**/*",
  "!dir/sub/file",
]
`;

exports[`parse [ '/dir/**/', '!/dir/sub' ] 1`] = `
[
  "dir/**/*/",
  "!dir/sub",
]
`;

exports[`parse [ '/dir/**/', '!/dir/sub/' ] 1`] = `
[
  "dir/**/*/",
  "!dir/sub/",
]
`;

exports[`parse [ '/dir/**/', '!/dir/sub/file' ] 1`] = `
[
  "dir/**/*/",
  "!dir/sub/file",
]
`;

exports[`parse [[\\]] 1`] = `
[
  "**/[[\\]]",
]
`;

exports[`parse [[] 1`] = `
[
  "**/[[]",
]
`;

exports[`parse [[]] 1`] = `
[
  "**/[[]]",
]
`;

exports[`parse []] 1`] = `
[
  "**/[]]",
]
`;

exports[`parse [{}()] 1`] = `
[
  "**/[\\{\\}\\(\\)]",
]
`;

exports[`parse [a\\\\bc] 1`] = `
[
  "**/[a\\\\bc]",
]
`;

exports[`parse [a\\-c] 1`] = `
[
  "**/[a\\-c]",
]
`;

exports[`parse [a\\bc] 1`] = `
[
  "**/[a\\bc]",
]
`;

exports[`parse [a-c] 1`] = `
[
  "**/[a-c]",
]
`;

exports[`parse [abc] 1`] = `
[
  "**/[abc]",
]
`;

exports[`parse \\   1`] = `
[
  "**/ ",
]
`;

exports[`parse \\!(a|b|c) 1`] = `
[
  "**/\\!\\(a|b|c\\)",
]
`;

exports[`parse \\!file 1`] = `
[
  "**/\\!file",
]
`;

exports[`parse \\#file 1`] = `
[
  "**/#file",
]
`;

exports[`parse \\*c 1`] = `
[
  "**/\\*c",
]
`;

exports[`parse \\[ 1`] = `
[
  "**/\\[",
]
`;

exports[`parse \\[\\] 1`] = `
[
  "**/\\[\\]",
]
`;

exports[`parse \\[] 1`] = `
[
  "**/\\[]",
]
`;

exports[`parse \\[abc 1`] = `
[
  "**/\\[abc",
]
`;

exports[`parse \\[abc\\] 1`] = `
[
  "**/\\[abc\\]",
]
`;

exports[`parse \\[abc] 1`] = `
[
  "**/\\[abc]",
]
`;

exports[`parse {a,b,c} 1`] = `
[
  "**/\\{a,b,c\\}",
]
`;

exports[`parse a* 1`] = `
[
  "**/a*",
]
`;

exports[`parse a*c 1`] = `
[
  "**/a*c",
]
`;

exports[`parse a/*/c 1`] = `
[
  "a/*/c",
]
`;

exports[`parse a/\\*/c 1`] = `
[
  "a/\\*/c",
]
`;

exports[`parse a\\* 1`] = `
[
  "**/a\\*",
]
`;

exports[`parse a\\*c 1`] = `
[
  "**/a\\*c",
]
`;

exports[`parse a\\\\bc 1`] = `
[
  "**/a\\\\bc",
]
`;

exports[`parse a\\bc 1`] = `
[
  "**/a\\bc",
]
`;

exports[`parse dir 1`] = `
[
  "**/dir",
]
`;

exports[`parse dir/ 1`] = `
[
  "**/dir/",
]
`;

exports[`parse dir/file 1`] = `
[
  "dir/file",
]
`;

exports[`parse fi  le 1`] = `
[
  "**/fi  le",
]
`;

exports[`parse file
dir/file 1`] = `
[
  "**/file",
  "dir/file",
]
`;

exports[`parse file
dir/file 1`] = `
[
  "**/file",
  "dir/file",
]
`;

exports[`parse file   1`] = `
[
  "**/file",
]
`;

exports[`parse file \\  1`] = `
[
  "**/file  ",
]
`;

exports[`parse file 1`] = `
[
  "**/file",
]
`;

exports[`parse file\\   1`] = `
[
  "**/file ",
]
`;

exports[`parse x/!(a|b|c) 1`] = `
[
  "x/!\\(a|b|c\\)",
]
`;

exports[`parse ﻿file 1`] = `
[
  "**/file",
]
`;
